--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,17 @@ body {
   display: grid;
   padding: 20px 10px;
   grid-template-rows: 100px;
-  grid-template-columns: 150px 150px 150px 150px 150px 150px; }
+  grid-template-columns: 150px 150px 150px 150px 150px 150px;
+  background-color: transparent; }
   .container-fluid .nav-item {
     margin: 20px;
     padding: 0px;
     justify-self: center;
     align-self: center; }
-    .container-fluid .nav-item .navbar-brand {
-      height: 80px !important;
-      border-radius: 5px;
-      box-sizing: border-box; }
+  .container-fluid .navbar-brand .logoppal {
+    height: 80px;
+    border-radius: 5px;
+    box-sizing: border-box; }
 
 /*
 @media screen and (max-width: 768px) {
