--- a/css/style.css
+++ b/css/style.css
@@ -23,39 +23,14 @@ body {
     align-self: center; }
     .container-fluid .nav-item .nav-link {
       color: rebeccapurple;
-      font-size: large;
+      font-size: 55px;
       font-weight: 900; }
   .container-fluid .navbar-brand .logoppal {
     height: 80px;
     border-radius: 5px;
     box-sizing: border-box; }
 
-/*
-@media screen and (max-width: 768px) {
-	.header-container {
-		width: 100%;
-	}
-	
-	.logoppal {
-		display: flex;
-		justify-content: center;
-	}
-
-	.header-nav {
-		margin:20px;
-    	padding: 0px;
-    	justify-self: center;
-    	align-self: center;
-		.nav-desktop {
-			display: none;
-		}
-		.nav-mobile {
-			display: block;
-			height: 70px;
-		}
-	}
-}
-cierre navbar y logo */
+/* cierre navbar y logo */
 /* inicio titulos y parrafo */
 .titulos {
   display: flex;
