--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,8 @@ p {
       width: 100%;
       text-align: center;
       padding: 5px;
-      margin: 20px 0px 0px 0px; } }
+      margin: 20px 0px 0px 0px;
+      font-size: small; } }
 
 /* cierre titulos y parrafo */
 /* inicio footer */
