--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ p {
       text-align: center;
       padding: 5px;
       margin: 20px 0px 0px 0px;
-      font-size: small; } }
+      font-size: 15px; } }
 
 /* cierre titulos y parrafo */
 /* inicio footer */
