--- a/scss/style.scss
+++ b/scss/style.scss
@@ -129,7 +129,7 @@ p {
 	@media screen and (max-width: 768px) {
 		@include displaytitulos;
 		margin: 20px 0px 0px 0px;
-		font-size:small;
+		font-size:15px;
 	}
 }
 /* cierre titulos y parrafo */
