--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,10 +173,17 @@ p {
 	}
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
 	.carousel slide {
 		display:none;
 	}
+}
+
+@media screen and (max-width: 768px) {
+	.images-desktop {
+		display: none;
+	}
+
 }
 
 .d-block w-100 {
