--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ p {
     align-content: center; } }
 
 @media screen and (min-width: 769px) {
-  .carousel slide {
+  .carousel-item {
     display: none; } }
 
 @media screen and (max-width: 768px) {
