--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,10 @@ p {
     text-align: center;
     padding: 5px;
     justify-content: center;
-    align-content: center; } }
+    align-content: center; }
+  .d-block w-100 {
+    width: 80%;
+    height: auto; } }
 
 /* cierre index */
 /* inicio tortas */
