--- a/scss/style.scss
+++ b/scss/style.scss
@@ -179,6 +179,10 @@ p {
 		justify-content: center;
 		align-content: center;
 	}
+	.d-block w-100 {
+		width: 80%;
+		height: auto;
+	}
 
 }
 /* cierre index */
