--- a/css/style.css
+++ b/css/style.css
@@ -176,11 +176,12 @@ p {
     grid-row-gap: 5px; }
     .tortas .info-tortas {
       display: grid;
-      grid-template-columns: 120px 260px;
+      grid-template-columns: 1fr 1fr;
       grid-template-rows: 150px;
       grid-column-gap: 6px;
       align-self: center; }
       .tortas .info-tortas span {
+        width: 100%;
         align-self: center;
         font-size: 14px; }
       .tortas .info-tortas .img-tortas {
