--- a/scss/style.scss
+++ b/scss/style.scss
@@ -228,7 +228,7 @@ p {
 		grid-row-gap: 5px;
 			.info-tortas {
 			display: grid;
-			grid-template-columns: 1fr 1fr;
+			grid-template-columns: 1fr 200px;
 			grid-template-rows: 150px;
 			grid-column-gap: 6px;
 			align-self: center;
