--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ p {
     grid-row-gap: 5px; }
     .tortas .info-tortas {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 200px;
       grid-template-rows: 150px;
       grid-column-gap: 6px;
       align-self: center; }
