--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ body {
   font-size: 30px;
   padding: 10px;
   margin: 10px 0px 0px 0px; }
+  @media screen and (max-width: 768px) {
+    .subtitulo1 {
+      text-align: center;
+      margin-top: 30px; } }
 
 p {
   width: 750px;
