--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ p {
 @media screen and (max-width: 768px) {
   .tortas {
     display: grid;
-    margin: 40px 0px 0px 20px;
+    margin: 20px 0px 0px 20px;
     grid-template-columns: 80%;
     grid-template-rows: repeat 8, 200px;
     grid-row-gap: 5px; }
@@ -209,18 +209,36 @@ p {
   margin: 20px 0px 10px 10px; }
   .cupcakes span {
     align-self: center; }
+  .cupcakes .img-cupcakes {
+    height: 120px;
+    width: 120px;
+    object-fit: cover;
+    border-radius: 15%;
+    transition-property: background, border-radius;
+    transition-duration: 1s;
+    transition-timing-function: linear; }
+  .cupcakes .img-cupcakes:hover {
+    border-radius: 50%; }
 
-.img-cupcakes {
-  height: 120px;
-  width: 120px;
-  object-fit: cover;
-  border-radius: 15%;
-  transition-property: background, border-radius;
-  transition-duration: 1s;
-  transition-timing-function: linear; }
-
-.img-cupcakes:hover {
-  border-radius: 50%; }
+@media screen and (max-width: 768px) {
+  .cupcakes {
+    display: grid;
+    grid-template-columns: 80%;
+    margin: 20px 0px 10px 10px; }
+    .cupcakes span {
+      width: 100%;
+      align-self: center;
+      font-size: 14px; }
+    .cupcakes .img-cupcakes {
+      height: 120px;
+      width: 120px;
+      object-fit: cover;
+      border-radius: 15%;
+      transition-property: background, border-radius;
+      transition-duration: 1s;
+      transition-timing-function: linear; }
+    .cupcakes .img-cupcakes:hover {
+      border-radius: 50%; } }
 
 /* cierre cupcakes */
 /* inicio recetas */
