--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,12 @@ $image-width: 120px;
 	width: 100%;
 }
 
+@mixin spanmobileproductos {
+	width: 100%;
+	align-self: center;
+	font-size: 14px;
+}
+
 /* inicio body */
 * {
 	font-family: $font-family;
@@ -122,7 +128,6 @@ body {
 		text-align: center;
 		margin-top: 30px;
 	}
-		
 }
 
 p {
@@ -228,7 +233,7 @@ p {
 @media screen and (max-width: 768px) {
 	.tortas {
 		display:grid;
-		margin: 40px 0px 0px 20px;
+		margin: 20px 0px 0px 20px;
 		grid-template-columns: 80%;
 		grid-template-rows: repeat (8, 200px);
 		grid-row-gap: 5px;
@@ -240,9 +245,7 @@ p {
 			align-self: center;
 		
 			span {
-				width: 100%;
-				align-self: center;
-				font-size: 14px;
+				@include spanmobileproductos;
 			}
 	
 			.img-tortas {
@@ -262,7 +265,6 @@ p {
 		}
 	}
 }
-
 /* cierre tortas */
 
 /* inicio cupcakes */
@@ -275,21 +277,49 @@ p {
 	span {
 		align-self: center;
 	}
+
+	.img-cupcakes {
+		height: $image-height;
+		width: $image-width;
+		object-fit: cover;
+		border-radius: 15%;
+		transition-property: background, border-radius;
+		transition-duration: 1s;
+		transition-timing-function: linear;
+	}
+	
+	  .img-cupcakes:hover {
+		border-radius: 50%;
+	}
 }
 
-.img-cupcakes {
-	height: $image-height;
-	width: $image-width;
-	object-fit: cover;
-	border-radius: 15%;
-    transition-property: background, border-radius;
-    transition-duration: 1s;
-    transition-timing-function: linear;
+@media screen and (max-width: 768px) {
+	.cupcakes{
+		display:grid;
+		grid-template-columns: 80%;
+		margin: 20px 0px 10px 10px;
+	
+		span {
+			@include spanmobileproductos;
+		}
+	
+		.img-cupcakes {
+			height: $image-height;
+			width: $image-width;
+			object-fit: cover;
+			border-radius: 15%;
+			transition-property: background, border-radius;
+			transition-duration: 1s;
+			transition-timing-function: linear;
+		}
+		
+		  .img-cupcakes:hover {
+			border-radius: 50%;
+		}
+	}
 }
 
-  .img-cupcakes:hover {
-    border-radius: 50%;
-}
+
 /* cierre cupcakes */
 
 /* inicio recetas */
