--- a/scss/style.scss
+++ b/scss/style.scss
@@ -295,9 +295,11 @@ p {
 
 @media screen and (max-width: 768px) {
 	.cupcakes{
-		display:grid;
-		grid-template-columns: 80%;
-		margin: 20px 0px 10px 10px;
+		display: grid;
+		grid-template-columns: 1fr 200px;
+		grid-template-rows: 150px;
+		grid-column-gap: 6px;
+		align-self: center;
 	
 		span {
 			@include spanmobileproductos;
