--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,8 @@ p {
     grid-template-columns: 1fr 200px;
     grid-template-rows: 150px;
     grid-column-gap: 6px;
-    align-self: center; }
+    align-self: center;
+    align-content: center; }
     .cupcakes span {
       width: 100%;
       align-self: center;
