--- a/scss/style.scss
+++ b/scss/style.scss
@@ -300,7 +300,6 @@ p {
 		grid-template-rows: 150px;
 		grid-column-gap: 6px;
 		align-self: center;
-		align-content: center;
 	
 		span {
 			@include spanmobileproductos;
@@ -314,6 +313,7 @@ p {
 			transition-property: background, border-radius;
 			transition-duration: 1s;
 			transition-timing-function: linear;
+			align-item: center;
 		}
 		
 		  .img-cupcakes:hover {
