--- a/css/style.css
+++ b/css/style.css
@@ -226,8 +226,7 @@ p {
     grid-template-columns: 1fr 200px;
     grid-template-rows: 150px;
     grid-column-gap: 6px;
-    align-self: center;
-    align-content: center; }
+    align-self: center; }
     .cupcakes span {
       width: 100%;
       align-self: center;
@@ -239,7 +238,8 @@ p {
       border-radius: 15%;
       transition-property: background, border-radius;
       transition-duration: 1s;
-      transition-timing-function: linear; }
+      transition-timing-function: linear;
+      align-item: center; }
     .cupcakes .img-cupcakes:hover {
       border-radius: 50%; } }
 
