--- a/scss/style.scss
+++ b/scss/style.scss
@@ -299,7 +299,7 @@ p {
 		grid-template-columns: 1fr 200px;
 		grid-template-rows: 150px;
 		grid-column-gap: 6px;
-		align-self: center;
+		align-content: center;
 	
 		span {
 			@include spanmobileproductos;
@@ -313,7 +313,6 @@ p {
 			transition-property: background, border-radius;
 			transition-duration: 1s;
 			transition-timing-function: linear;
-			align-item: center;
 		}
 		
 		  .img-cupcakes:hover {
