--- a/scss/style.scss
+++ b/scss/style.scss
@@ -313,6 +313,7 @@ p {
 			transition-property: background, border-radius;
 			transition-duration: 1s;
 			transition-timing-function: linear;
+			align-self: center;
 		}
 		
 		  .img-cupcakes:hover {
