--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,8 @@ p {
       border-radius: 15%;
       transition-property: background, border-radius;
       transition-duration: 1s;
-      transition-timing-function: linear; }
+      transition-timing-function: linear;
+      align-self: center; }
     .cupcakes .img-cupcakes:hover {
       border-radius: 50%; } }
 
