--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ p {
     grid-template-columns: 1fr 200px;
     grid-template-rows: 150px;
     grid-column-gap: 6px;
+    justify-content: center;
     align-content: center; }
     .cupcakes span {
       width: 100%;
