--- a/scss/style.scss
+++ b/scss/style.scss
@@ -296,7 +296,7 @@ p {
 @media screen and (max-width: 768px) {
 	.cupcakes{
 		display: grid;
-		grid-template-columns: 1fr 200px;
+		grid-template-columns: 130px 200px;
 		grid-template-rows: 150px;
 		grid-column-gap: 6px;
 		justify-content: center;
