--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,17 @@ p {
   grid-template-columns: 700px;
   grid-template-rows: repeat 5, 350px;
   grid-row-gap: 10px;
-  padding: 15px;
+  padding: 10px;
   width: 65%; }
+
+@media screen and (max-width: 768px) {
+  .recetas {
+    display: grid;
+    grid-template-columns: 90%;
+    grid-template-rows: repeat 5, 250px;
+    grid-row-gap: 5px;
+    padding: 15px;
+    width: 100%; } }
 
 /* cierre recetas */
 /* inicio contacto */
