--- a/css/style.css
+++ b/css/style.css
@@ -257,8 +257,8 @@ p {
 @media screen and (max-width: 768px) {
   .recetas {
     display: grid;
-    grid-template-columns: 90%;
-    grid-template-rows: repeat 5, 250px;
+    grid-template-columns: 300px;
+    grid-template-rows: repeat 5, 200px;
     grid-row-gap: 5px;
     padding: 15px;
     width: 100%; } }
