--- a/scss/style.scss
+++ b/scss/style.scss
@@ -336,14 +336,16 @@ p {
 
 @media screen and (max-width: 768px) {
 	.recetas {
-		display:grid;
-		grid-template-columns: 300px;
-		grid-template-rows: repeat (5, 200px);
-		grid-row-gap: 5px;
-		padding: 15px;
-		width: 100%;
+		.links_recetas {
+			display:grid;
+			grid-template-columns: 300px;
+			grid-template-rows: repeat (5, 200px);
+			grid-row-gap: 5px;
+			padding: 15px;
+			width: 100%;
+		}
 	}
-}
+}	
 /* cierre recetas */
 
 /* inicio contacto */
