--- a/scss/style.scss
+++ b/scss/style.scss
@@ -336,8 +336,10 @@ p {
 
 @media screen and (max-width: 768px) {
 	.recetas {
+		.videos {
 		padding: 15px;
 		width: 90%;
+		}
 	}
 }	
 /* cierre recetas */
