--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ p {
   width: 65%; }
 
 @media screen and (max-width: 768px) {
-  .recetas {
+  .recetas .videos {
     padding: 15px;
     width: 90%; } }
 
