--- a/scss/style.scss
+++ b/scss/style.scss
@@ -332,6 +332,9 @@ p {
 	grid-row-gap: 10px;
 	padding: 10px;
 	width: 65%;
+	.videos {
+		width: 70%;
+	}
 }
 
 @media screen and (max-width: 768px) {
