--- a/scss/style.scss
+++ b/scss/style.scss
@@ -332,17 +332,12 @@ p {
 	grid-row-gap: 10px;
 	padding: 10px;
 	width: 65%;
-	.videos {
-		width: 70%;
-	}
 }
 
 @media screen and (max-width: 768px) {
-	.recetas {
-		.videos {
-		padding: 15px;
-		width: 90%;
-		}
+	.iframe {
+		width: 250px !important;
+		height: 125px !important;
 	}
 }	
 /* cierre recetas */
