--- a/scss/style.scss
+++ b/scss/style.scss
@@ -328,14 +328,14 @@ p {
 .recetas {
 	display:grid;
 	grid-template-columns: 700px;
-	grid-template-rows: repeat (5, 350px);
+	grid-template-rows: repeat (5, 320px);
 	grid-row-gap: 10px;
 	padding: 10px;
 	width: 65%;
 }
 
 @media screen and (max-width: 768px) {
-	.iframe {
+	.videos {
 		width: 250px !important;
 		height: 125px !important;
 	}
