--- a/scss/style.scss
+++ b/scss/style.scss
@@ -338,6 +338,11 @@ p {
 	}
 }
 
+.iframe {
+	width: 560px;
+	height: 315px;
+}
+
 @media screen and (max-width: 768px) {
 	.videos {
 		width: 250px !important;
