--- a/scss/style.scss
+++ b/scss/style.scss
@@ -347,43 +347,51 @@ iframe {
 	margin: 20px 10px;
 }
 
-.detalle-form {
-	margin-left: 10px;
+.contact_form {
+	.detalle-form {
+		margin-left: 10px;
+	}
+
+	.formulario {
+		background-color:white;
+		display:block;
+		width: 40%;
+		padding: 12px 20px;
+		margin: 8px 10px;
+		box-sizing: border-box;
+		border:none;
+		border-radius: 4px;
+	}
+
+	.formulario:focus {
+		border: 3px solid $primary-color;
+	}
+
+	.formulario2 {
+		background-color:white;
+		display:block;
+		width: 40%;
+		height:120px;
+		padding: 12px 20px;
+		margin: 8px 10px;
+		box-sizing: border-box;
+		border: none;
+		border-radius: 4px;
+	}
+
+	.formulario2:focus {
+		border: 3px solid $primary-color;
+	}
 }
 
-.formulario {
-	background-color:white;
-	display:block;
-	width: 40%;
-  	padding: 12px 20px;
-  	margin: 8px 10px;
-  	box-sizing: border-box;
-	border:none;
-	border-radius: 4px;
-}
+.buttons{
+	display:flex;
+	width: 500px;
+	justify-content: end;
 
-.formulario:focus {
-	border: 3px solid $primary-color;
-}
-
-.formulario2 {
-	background-color:white;
-	display:block;
-	width: 40%;
-	height:120px;
-  	padding: 12px 20px;
-  	margin: 8px 10px;
-  	box-sizing: border-box;
-	border: none;
-	border-radius: 4px;
-}
-
-.formulario2:focus {
-	border: 3px solid $primary-color;
-}
-
-.formulario3 {
-	font-size: 18px;
+	.formulario3 {
+		font-size: 18px;
+	}
 }
 
 input[type=submit], input[type=reset] {
@@ -395,12 +403,8 @@ input[type=submit], input[type=reset] {
 	text-decoration: none;
 	margin: 4px 10px;
 	cursor: pointer;
-  }
-
-.buttons{
-	display:flex;
-	width: 500px;
-	justify-content: end;
 }
+
+
 /* cierre contacto */
 
