--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,6 +34,16 @@ $image-width: 120px;
 	font-size: 14px;
 }
 
+@mixin contactform {
+	display:block;
+	width: 40%;
+	padding: 12px 20px;
+	margin: 8px 10px;
+	box-sizing: border-box;
+	border:none;
+	border-radius: 4px;
+}
+
 /* inicio body */
 * {
 	font-family: $font-family;
@@ -350,17 +360,12 @@ iframe {
 .contact_form {
 	.detalle-form {
 		margin-left: 10px;
+		@include contactform;
 	}
 
 	.formulario {
 		background-color:white;
-		display:block;
-		width: 40%;
-		padding: 12px 20px;
-		margin: 8px 10px;
-		box-sizing: border-box;
-		border:none;
-		border-radius: 4px;
+
 	}
 
 	.formulario:focus {
@@ -369,14 +374,8 @@ iframe {
 
 	.formulario2 {
 		background-color:white;
-		display:block;
-		width: 40%;
-		height:120px;
-		padding: 12px 20px;
 		margin: 8px 10px;
-		box-sizing: border-box;
-		border: none;
-		border-radius: 4px;
+		@include contactform;
 	}
 
 	.formulario2:focus {
