--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@ $p-font-size: 1.2em;
 $padding-titles: 10px;
 $image-height: 120px;
 $image-width: 120px; 
+$form-color: white;
 
 @mixin displayindex {
 	display: inline-block;
@@ -364,18 +365,14 @@ iframe {
 	}
 
 	.formulario {
-		background-color:white;
+		background-color: $form-color;
 	}
 
 	.formulario2 {
-		background-color:white;
+		background-color: $form-color;
 		margin: 8px 10px;
 		@include contactform;
 	}
-}
-
-.formulario:focus {
-	background-color: ivory;
 }
 
 .buttons{
