--- a/scss/style.scss
+++ b/scss/style.scss
@@ -358,6 +358,12 @@ iframe {
 	margin: 20px 10px;
 }
 
+.form-control {
+	margin-left: 10px;
+	width: 80%;
+}
+
+
 .contact_form {
 	.detalle-form {
 		margin-left: 10px;
@@ -395,51 +401,6 @@ input[type=submit], input[type=reset] {
 	text-decoration: none;
 	margin: 4px 10px;
 	cursor: pointer;
-}
-
-@media screen and (max-width: 768px) {
-	.contact_form {
-		.detalle-form {
-			display:inline-block;
-			width: 80%;
-			padding: 6px 10px;
-			margin: 8px 10px;
-			box-sizing: border-box;
-			border:none;
-			border-radius: 4px;
-		}
-	
-		.formulario {
-			background-color: $form-color;
-			border: none;
-		}
-	
-		.formulario2 {
-			background-color: $form-color;
-			@include contactform;
-		}
-	}
-	
-	.buttons{
-		display:flex;
-		width: 500px;
-		justify-content: end;
-	
-		.formulario3 {
-			font-size: 18px;
-		}
-	}
-	
-	input[type=submit], input[type=reset] {
-		background-color: rgb(147, 125, 169);
-		border: none;
-		border-radius: 4px;
-		color: white;
-		padding: 10px 10px;
-		text-decoration: none;
-		margin: 4px 10px;
-		cursor: pointer;
-	}
 }
 
 /* cierre contacto */
