--- a/scss/style.scss
+++ b/scss/style.scss
@@ -359,8 +359,8 @@ iframe {
 }
 
 .form-control {
-	margin-left: 10px;
-	width: 80%;
+	margin-left: 10px !important;
+	width: 80% !important;
 }
 
 
