--- a/css/style.css
+++ b/css/style.css
@@ -251,65 +251,21 @@ p {
   grid-template-columns: 700px;
   grid-template-rows: repeat 5, 350px;
   grid-row-gap: 10px;
-  padding: 10px;
+  padding: 15px;
   width: 65%; }
 
 @media screen and (max-width: 768px) {
-  .recetas .videos {
-    padding: 15px;
-    width: 90%; } }
+  .videos {
+    width: 250px !important;
+    height: 125px !important; } }
 
 /* cierre recetas */
 /* inicio contacto */
 iframe {
   margin: 20px 10px; }
 
-.detalle-form {
-  margin-left: 10px; }
-
-.formulario {
-  background-color: white;
-  display: block;
-  width: 40%;
-  padding: 12px 20px;
-  margin: 8px 10px;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px; }
-
-.formulario:focus {
-  border: 3px solid rebeccapurple; }
-
-.formulario2 {
-  background-color: white;
-  display: block;
-  width: 40%;
-  height: 120px;
-  padding: 12px 20px;
-  margin: 8px 10px;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px; }
-
-.formulario2:focus {
-  border: 3px solid rebeccapurple; }
-
-.formulario3 {
-  font-size: 18px; }
-
-input[type=submit], input[type=reset] {
-  background-color: #937da9;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 10px 10px;
-  text-decoration: none;
-  margin: 4px 10px;
-  cursor: pointer; }
-
-.buttons {
-  display: flex;
-  width: 500px;
-  justify-content: end; }
+#formInput {
+  margin-left: 10px !important;
+  width: 65% !important; }
 
 /* cierre contacto */
