--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,11 @@ iframe {
   margin: 20px 10px; }
 
 #formInput {
-  margin-left: 10px !important;
-  width: 65% !important; }
+  margin-left: 10px;
+  width: 60%; }
+
+.form-label {
+  margin-left: 10px;
+  font-weight: 300; }
 
 /* cierre contacto */
