--- a/css/style.css
+++ b/css/style.css
@@ -272,4 +272,19 @@ iframe {
   margin-left: 10px;
   font-weight: 300; }
 
+input[type=submit], input[type=reset] {
+  background-color: #937da9;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  padding: 10px 10px;
+  text-decoration: none;
+  margin: 4px 10px;
+  cursor: pointer; }
+
+.buttons {
+  display: flex;
+  width: 500px;
+  justify-content: end; }
+
 /* cierre contacto */
