--- a/scss/style.scss
+++ b/scss/style.scss
@@ -381,8 +381,8 @@ input[type=submit], input[type=reset] {
 
 .buttons{
 	display:flex;
-	width: 500px;
-	justify-content: end;
+	width: 60%;
+	justify-content: center;
 }
 
 /* cierre contacto */
