--- a/css/style.css
+++ b/css/style.css
@@ -287,4 +287,12 @@ input[type=submit], input[type=reset] {
   width: 60%;
   justify-content: center; }
 
+@media screen and (max-width) {
+  iframe {
+    width: 300px;
+    margin: 20px 10px; }
+  input[type=submit], input[type=reset] {
+    padding: 0px;
+    margin: 2px 8px; } }
+
 /* cierre contacto */
