--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,10 @@ input[type=submit], input[type=reset] {
     margin: 20px 10px; }
   input[type=submit], input[type=reset] {
     padding: 0px;
-    margin: 2px 8px; } }
+    margin: 2px 8px; }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; } }
 
 /* cierre contacto */
