--- a/css/style.css
+++ b/css/style.css
@@ -272,32 +272,31 @@ iframe {
   margin-left: 10px;
   font-weight: 300; }
 
-input[type=submit], input[type=reset] {
-  background-color: #937da9;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 10px 10px;
-  text-decoration: none;
-  margin: 4px 10px;
-  cursor: pointer; }
-
 .buttons {
   display: flex;
   width: 60%;
   justify-content: center; }
+  .buttons input[type=submit], .buttons input[type=reset] {
+    background-color: #937da9;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 10px 10px;
+    text-decoration: none;
+    margin: 4px 10px;
+    cursor: pointer; }
 
 @media screen and (max-width) {
   iframe {
     width: 300px;
     margin: 20px 10px; }
-  input[type=submit], input[type=reset] {
-    padding: 0px;
-    margin: 2px 8px; }
   .buttons {
     display: flex;
     flex-direction: row;
     justify-content: left;
-    margin: 10px; } }
+    margin: 10px; }
+    .buttons input[type=submit], .buttons input[type=reset] {
+      padding: 0px;
+      margin: 2px 8px; } }
 
 /* cierre contacto */
