--- a/scss/style.scss
+++ b/scss/style.scss
@@ -368,7 +368,7 @@ iframe {
 	font-weight: 300;
 }
 
-.buttons{
+.btn{
 	display:flex;
 	width: 60%;
 	justify-content: center;
@@ -390,7 +390,7 @@ iframe {
 		margin: 20px 10px;
 	}
 
-	.buttons{
+	.btn{
 		display:flex;
 		flex-direction: row;
 		justify-content: space-evenly;
