--- a/css/style.css
+++ b/css/style.css
@@ -272,19 +272,21 @@ iframe {
   margin-left: 10px;
   font-weight: 300; }
 
-.btn btn-primary {
-  display: flex;
-  width: 60%;
-  justify-content: center; }
-  .btn btn-primary input[type=submit], .btn btn-primary input[type=reset] {
-    background-color: #937da9;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    padding: 10px 10px;
-    text-decoration: none;
-    margin: 4px 10px;
-    cursor: pointer; }
+.buttons {
+  margin-left: 10px; }
+  .buttons .btn btn-primary {
+    display: flex;
+    width: 60%;
+    justify-content: center; }
+    .buttons .btn btn-primary input[type=submit], .buttons .btn btn-primary input[type=reset] {
+      background-color: #937da9;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      padding: 10px 10px;
+      text-decoration: none;
+      margin: 4px 10px;
+      cursor: pointer; }
 
 @media screen and (max-width) {
   iframe {
