--- a/scss/style.scss
+++ b/scss/style.scss
@@ -368,20 +368,23 @@ iframe {
 	font-weight: 300;
 }
 
-.btn btn-primary{
-	display:flex;
-	width: 60%;
-	justify-content: center;
-	input[type=submit], input[type=reset] {
-		background-color: rgb(147, 125, 169);
-		border: none;
-		border-radius: 4px;
-		color: white;
-		padding: 10px 10px;
-		text-decoration: none;
-		margin: 4px 10px;
-		cursor: pointer;
-	  }
+.buttons {
+	margin-left: 10px;
+	.btn btn-primary{
+		display:flex;
+		width: 60%;
+		justify-content: center;
+		input[type=submit], input[type=reset] {
+			background-color: rgb(147, 125, 169);
+			border: none;
+			border-radius: 4px;
+			color: white;
+			padding: 10px 10px;
+			text-decoration: none;
+			margin: 4px 10px;
+			cursor: pointer;
+		}
+	}
 }
 
 @media screen and (max-width) {
