--- a/css/style.css
+++ b/css/style.css
@@ -277,16 +277,15 @@ iframe {
   .buttons .btn btn-primary {
     display: flex;
     width: 60%;
-    justify-content: center; }
-    .buttons .btn btn-primary input[type=submit], .buttons .btn btn-primary input[type=reset] {
-      background-color: #937da9;
-      border: none;
-      border-radius: 4px;
-      color: white;
-      padding: 10px 10px;
-      text-decoration: none;
-      margin: 4px 10px;
-      cursor: pointer; }
+    justify-content: center;
+    background-color: #937da9;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    padding: 5px 5px;
+    text-decoration: none;
+    margin: 4px 10px;
+    cursor: pointer; }
 
 @media screen and (max-width) {
   iframe {
