--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,12 @@ p {
 
 /* cierre recetas */
 /* inicio contacto */
+.lista_contacto {
+  list-style: none; }
+  .lista_contacto .datos_contacto {
+    color: white;
+    font-size: medium; }
+
 #formInput {
   margin-left: 10px;
   width: 60%; }
