--- a/scss/style.scss
+++ b/scss/style.scss
@@ -356,9 +356,10 @@ p {
 /* inicio contacto */
 .lista_contacto {
 	list-style: none;
+	margin-left: 15px;
 	.datos_contacto {
 		color: white;
-		font-size: medium;
+		font-size: large;
 	}
 }
 
