--- a/scss/style.scss
+++ b/scss/style.scss
@@ -357,6 +357,7 @@ p {
 .lista_contacto {
 	list-style: none;
 	margin-left: 15px;
+	padding: 0px;
 	.datos_contacto {
 		color: white;
 		font-size: large;
