--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ p {
   margin-left: 15px;
   padding: 0px; }
   .lista_contacto .datos_contacto {
-    color: rebeccapurple;
+    color: white;
     font-size: large;
     font-weight: 700; }
 
