--- a/scss/style.scss
+++ b/scss/style.scss
@@ -359,7 +359,7 @@ p {
 	margin-left: 15px;
 	padding: 0px;
 	.datos_contacto {
-		color: $primary-color;
+		color: white;
 		font-size: large;
 		font-weight: 700;
 	}
