--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ p {
   margin-left: 15px;
   padding: 0px; }
   .lista_contacto .datos_contacto {
-    color: white;
+    color: rebeccapurple;
     font-size: large;
     font-weight: 700; }
 
@@ -291,5 +291,10 @@ p {
     text-decoration: none;
     margin: 4px 10px;
     cursor: pointer; }
+
+@media screen and (max-width: 768px) {
+  .lista_contacto {
+    display: flex;
+    justify-content: center; } }
 
 /* cierre contacto */
