--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ p {
   .lista_contacto {
     display: flex;
     justify-content: center;
-    flex-direction: column; } }
+    flex-direction: column;
+    width: 100%; } }
 
 /* cierre contacto */
