--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ p {
     cursor: pointer; }
 
 @media screen and (max-width: 768px) {
-  .lista_contacto {
+  .lista_c {
     display: flex;
     justify-content: center;
     flex-direction: column;
