--- a/scss/style.scss
+++ b/scss/style.scss
@@ -392,7 +392,7 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-	.lista_contacto {
+	.lista_c {
 		display:flex;
 		justify-content: center;
 		flex-direction: column;
