--- a/css/style.css
+++ b/css/style.css
@@ -294,9 +294,9 @@ p {
 
 @media screen and (max-width: 768px) {
   .lista_c {
-    display: flex;
-    justify-items: center;
-    flex-direction: column;
-    width: 100%; } }
+    display: grid;
+    width: 100%;
+    grid-template-rows: 20px 20px;
+    justify-content: center; } }
 
 /* cierre contacto */
