--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,8 @@ p {
     display: grid;
     width: 100%;
     grid-template-rows: 20px 20px;
-    justify-content: center; } }
+    justify-content: center; }
+    .lista_c .datos_contacto {
+      justify-items: center; } }
 
 /* cierre contacto */
