--- a/scss/style.scss
+++ b/scss/style.scss
@@ -397,6 +397,9 @@ p {
 		width: 100%;
 		grid-template-rows: 20px 20px;
 		justify-content: center;
+		.datos_contacto {
+			justify-items: center;
+		}
 	}
 }
 /* cierre contacto */
