--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,6 @@ p {
     grid-template-rows: 20px 20px;
     justify-content: center; }
     .lista_c .datos_contacto {
-      justify-items: center; } }
+      justify-content: center; } }
 
 /* cierre contacto */
