--- a/scss/style.scss
+++ b/scss/style.scss
@@ -398,7 +398,7 @@ p {
 		grid-template-rows: 20px 20px;
 		justify-content: center;
 		.datos_contacto {
-			justify-items: center;
+			justify-content: center;
 		}
 	}
 }
