--- a/css/style.css
+++ b/css/style.css
@@ -251,8 +251,7 @@ p {
   grid-template-columns: 700px;
   grid-template-rows: repeat 5, 350px;
   grid-row-gap: 10px;
-  padding: 15px;
-  width: 65%; }
+  padding: 15px; }
 
 @media screen and (max-width: 768px) {
   .videos {
