--- a/scss/style.scss
+++ b/scss/style.scss
@@ -342,6 +342,7 @@ p {
 	grid-template-rows: repeat (5, 350px);
 	grid-row-gap: 10px;
 	padding: 15px;
+	width: 100vw;
 }
 
 @media screen and (max-width: 768px) {
