--- a/css/style.css
+++ b/css/style.css
@@ -253,12 +253,12 @@ p {
   grid-row-gap: 10px;
   padding: 15px; }
   .recetas .videos iframe {
-    width: 65vw; }
+    width: 50vw; }
 
 @media screen and (max-width: 768px) {
-  .videos {
-    width: 250px !important;
-    height: 125px !important; } }
+  iframe {
+    width: 90vw;
+    align-items: center; } }
 
 /* cierre recetas */
 /* inicio contacto */
