--- a/scss/style.scss
+++ b/scss/style.scss
@@ -350,14 +350,21 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-	.videos {
-		width: 95%;	
-		iframe {
-			width: 90vw;
-			align-items: center;
+	.recetas {
+		display:grid;
+		grid-template-columns: 350px;
+		grid-template-rows: repeat (5, 150px);
+		grid-row-gap: 5px;
+		padding: 10px;
+		.videos {
+			width: 95%;	
+			iframe {
+				width: 90vw;
+				align-items: center;
+			}
 		}
-	}
-}	
+	}	
+}
 /* cierre recetas */
 
 /* inicio contacto */
