--- a/scss/style.scss
+++ b/scss/style.scss
@@ -353,13 +353,13 @@ p {
 	.recetas {
 		display:grid;
 		grid-template-columns: 350px;
-		grid-template-rows: 100px 100px 100px 100px 100px;
-		grid-row-gap: 5px;
 		padding: 10px;
 		.videos {
 			width: 95%;	
+			height: auto;
 			iframe {
 				width: 90vw;
+				height: auto;
 				align-items: center;
 			}
 		}
