--- a/css/style.css
+++ b/css/style.css
@@ -259,13 +259,13 @@ p {
   .recetas {
     display: grid;
     grid-template-columns: 350px;
-    grid-template-rows: 100px 100px 100px 100px 100px;
-    grid-row-gap: 5px;
     padding: 10px; }
     .recetas .videos {
-      width: 95%; }
+      width: 95%;
+      height: auto; }
       .recetas .videos iframe {
         width: 90vw;
+        height: auto;
         align-items: center; } }
 
 /* cierre recetas */
