--- a/scss/style.scss
+++ b/scss/style.scss
@@ -354,6 +354,7 @@ p {
 		display:grid;
 		grid-template-columns: 350px;
 		padding: 10px;
+		justify-content: center;
 		.videos {
 			width: 95%;	
 			height: auto;
