--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,8 @@ p {
   .recetas {
     display: grid;
     grid-template-columns: 350px;
-    padding: 10px; }
+    padding: 10px;
+    justify-content: center; }
     .recetas .videos {
       width: 95%;
       height: auto; }
